overlays/prod/all-services-command-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
      - name: backend
        command:
          - "uvicorn"
          - "app:app"
          - "--host"
          - "0.0.0.0"
          - "--port"
          - "4008"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarot
spec:
  template:
    spec:
      containers:
      - name: tarot
        command:
          - "uvicorn"
          - "app:app"
          - "--host"
          - "0.0.0.0"
          - "--port"
          - "4007"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blind-date
spec:
  template:
    spec:
      containers:
      - name: blind-date
        command:
          - "uvicorn"
          - "app:app"
          - "--host"
          - "0.0.0.0"
          - "--port"
          - "4010"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-chat
spec:
  template:
    spec:
      containers:
      - name: custom-chat
        command:
          - "uvicorn"
          - "app:app"
          - "--host"
          - "0.0.0.0"
          - "--port"
          - "4009"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concierge
spec:
  template:
    spec:
      containers:
      - name: concierge
        command:
          - "uvicorn"
          - "app:app"
          - "--host"
          - "0.0.0.0"
          - "--port"
          - "4011"
