overlays/prod/all-services-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
      - name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarot
spec:
  template:
    spec:
      containers:
      - name: tarot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blind-date
spec:
  template:
    spec:
      containers:
      - name: blind-date
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-chat
spec:
  template:
    spec:
      containers:
      - name: custom-chat
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concierge
spec:
  template:
    spec:
      containers:
      - name: concierge
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fact-worker
spec:
  template:
    spec:
      containers:
      - name: fact-worker
