overlays/prod/backend-command-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
      - name: backend
        command:
          - "uvicorn"
          - "app:app"
          - "--host"
          - "0.0.0.0"
          - "--port"
          - "4008"
