overlays/prod/tarot-command-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarot
spec:
  template:
    spec:
      containers:
      - name: tarot
        command:
          - "uvicorn"
          - "app:app"
          - "--host"
          - "0.0.0.0"
          - "--port"
          - "4007"
