overlays/prod/tarot-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarot
spec:
  template:
    spec:
      containers:
      - name: tarot
